Fixed footer design, not aligning at bottom

--- a/app/style/style.css
+++ b/app/style/style.css
@@ -79,10 +79,11 @@ body {
 }
 
 .footer{
-    margin-left: -5%;
-    position: absolute;
-    width: 100%;
+    /* margin-left: -5%; */
+    /* position: absolute; */
+    /* width: 100%; */
     bottom: 0;
+    margin-bottom: 3px;
 }
 
 .footer-image{
